tier1_vpx_ingress_weavesocks_COE.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-k8s-ingress-controller
spec:
  selector:
    matchLabels:
      app: cic-k8s-ingress-controller
  replicas: 1
  template:
    metadata:
      name: cic-k8s-ingress-controller
      labels:
        app: cic-k8s-ingress-controller
      annotations:
    spec:
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.11.2"
        args:
          - --ingress-classes
            tier-1-vpx
          - --feature-node-watch
            false
        imagePullPolicy: Always

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weavesocks-ingress
  annotations:
    kubernetes.io/ingress.class: "tier-1-vpx"
    ingress.citrix.com/frontend-ip: "192.168.10.75"
spec:
  rules:
  - host:  citrix.weavesocks
    http:
      paths:
      - path:
        backend:
          serviceName: front-end
          servicePort: 80
